--- a/recipes/strogonoff.html
+++ b/recipes/strogonoff.html
@@ -2,8 +2,15 @@
 
 <html lang="en">
   <head>
-    <h1>Lasagna Recipe</h1>
+    <h1>Stroganoff Recipe</h1>
     <meta charset="UTF-8">
+
+    <h2>Description </h2>
+    Stroganoff chicken is a delicious dish made with tender chicken pieces cooked in a creamy sauce, typically served with rice or pasta
+    <p></p>
+    <img src="./stro.avif" alt="Stroganoff plated">
     <title></title>
+
+
   </head>
 </html>
